--- a/login.html
+++ b/login.html
@@ -4,27 +4,51 @@
     <meta charset="UTF-8">
     <title>Авторизация</title>
     <link rel="icon" href="image/icon.jpg">
-    <link href="css/app.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;700&display=swap" rel="stylesheet">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" >
+    <link href="frontend/public/css/app.css" rel="stylesheet">
 </head>
 <body>
 <header>
     <div class="container">
-        <div class ="brand">
-            <a href="Name.html"><img src="image/Logo.jpg"></a>
-        </div>
-        <nav class="navigation">
-            <ul>
-                <li><a href="Web.html"> Каталог</a> </li>
-                <li><a href="">Топ-10 машин</a></li>
-                <li><a href="">Легковые</a></li>
-                <li><a href="">Грузовые</a></li>
-                <li><a href="">Мото</a></li>
-                <li><a href="">О нас</a></li>
-                <li><a href="">Корзина</a></li>
-                <li><a href="login.html">Войти</a></li>
+        <nav class="navbar navbar-expand-lg">
+            <div class="container-fluid">
+                <a class="navbar-brand" href="Home.html"><img src="image/1.jpg"></a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Переключатель навигации">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                    <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                        <li class="nav-item">
+                            <a class="nav-link" href="Catalog.html">Каталог</a>
+                        </li>
 
-            </ul>
+                        <li class="nav-item">
+                            <a class="nav-link" href="Cars.html">Легковые</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="Gruz.html">Грузовые</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">Мото</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">О нас</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">Корзина</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link active" aria-current="page" href="">Войти</a>
+                        </li>
+
+                    </ul>
+                    <form class="d-flex" role="search">
+                        <input class="form-control me-2" type="search" placeholder="Поиск" aria-label="Поиск">
+                        <button class="btn btn-outline-success" type="submit">Поиск</button>
+                    </form>
+                </div>
+            </div>
         </nav>
 
     </div>
@@ -34,18 +58,19 @@
 <main>
         <section class="login">
 
-            <h1>Авторизация </h1>
+            <h4 class ="Name-login">Авторизация </h4>
 
-            <form>
+            <form id="form-authorization">
                 <div class="input-form">
                     <input type="text" name="login" placeholder="Введите Email">
                 </div>
                 <div class="input-form">
                     <input type="password" name="password" placeholder="Введите пароль">
                 </div>
+                <div id="error"></div>
                 <div class="Button">
                     <div class="Button-input">
-                        <button class="Button-card" type="submit"><a href="">Войти</a></button>
+                        <button class="Button-card" type="submit">Войти</button>
                     </div>
                     <div class="Button-reg">
                         <button class="Button-card" type="submit"><a href="Registration.html">Зарегистрироваться</a></button>
@@ -68,6 +93,7 @@
         </div>
 
     </footer>
-
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="JS/Authorization.js"></script>
 </body>
 </html>
